<resources>
    <string name="app_name">Vocabulary</string>
    <string name="title_words">Words</string>
    <string name="title_tests">Exercises</string>
    <string name="title_settings">Settings</string>

    <string name="hint_search">Search…</string>
    <!--    <string name="loading">Loading…%s%%</string>-->
    <string name="loading">Loading %s%%</string>
    <string name="start">Start</string>

    <string name="query_create_table">CREATE TABLE %s ( %s )</string>
    <string name="query_drop_table">DROP TABLE IF EXISTS %s</string>
    <string name="query_select_where">SELECT * FROM %s WHERE %s=\'%s\'</string>
    <string name="query_search_words">SELECT * FROM %s WHERE %s LIKE \'%%%s%%\' OR %s LIKE \'%%%s%%\' ORDER BY %s</string>
    <string name="query_select_fail_words_right_join">SELECT * FROM (SELECT * FROM %s LIMIT %s) RIGHT JOIN %s ON %s = %s</string>
    <!--    <string name="query_select_fail_words_left_join">SELECT * FROM (SELECT * FROM %s ) LEFT JOIN %s ON %s = %s LIMIT %s</string>-->
    <string name="query_select_fail_words_left_join">SELECT * FROM (SELECT * FROM %s ) AS A LEFT JOIN %s AS B ON A.%s = B.%s LIMIT %s</string>

    <string name="message_empty_field">This field can not be empty</string>
    <string name="message_language_exist">This language already exist</string>
    <string name="message_word_exist">This word already exist</string>
    <string name="message_word_table_exist">Words base with this name already exist</string>

    <string name="apply_filters">Apply filters</string>
    <string name="reset">Reset</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="add_new_language">Add New Language</string>
    <string name="edit_language">Edit Language</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="add_new_word">Add New Word</string>
    <string name="edit_word">Edit Word</string>

    <string name="word">Word</string>
    <string name="translate">Translation</string>
    <string name="language">Language</string>
    <string name="words_count_title">Words:</string>

    <string name="message_deleting_language">With deleting you also delete all words and games related with this language</string>
    <string name="message_sure_language">Are you sure you want to delete this language?</string>
    <string name="message_sure_word">Are you sure you want to delete this word?</string>

    <string name="message_sure_exit">Are you sure you want to exit?</string>

    <string name="delete_language_model">%s ( %s words )</string>
    <string name="delete_word_model">%s ( %s )</string>

    <string name="theme_sunrise">Sunrise</string>
    <string name="theme_grape">Grape</string>
    <string name="theme_razz">Razz</string>
    <string name="theme_sundown">Sundown</string>
    <string name="theme_ocean">Ocean</string>
    <string name="theme_spring">Spring</string>
    <string name="theme_autumn">Autumn</string>
    <string name="theme_bubblegum">Bubblegum</string>
    <string name="theme_lilac">Lilac</string>
    <string name="theme_eclipse">Eclipse</string>
    <string name="theme_azure">Azure</string>


    <string name="no_languages_found_title">NO LANGUAGES FOUND</string>
    <string name="no_languages_found_message">Please add new language</string>
    <string name="button_add_new_language">Add new language</string>

    <string name="no_languages_select_message">Please select the language</string>
    <string name="button_select_new_language">Select language</string>

    <string name="no_words_found_title">NO WORDS FOUND</string>
    <string name="no_words_found_message">Please add new word</string>
    <string name="button_add_new_word">Add new word</string>

    <string name="not_enough_words_for_exercises_title">NOT ENOUGH WORDS</string>
    <string name="not_enough_words_for_exercises_message">Please add more words</string>

    <string name="sort_by">Sort By</string>

    <string name="sort_sett_az">A-Z</string>
    <string name="sort_sett_za">Z-A</string>

    <string name="btn_i_dont_know">I Don\'t Know</string>
    <string name="btn_check">CHECK</string>
    <string name="btn_finish">FINISH</string>
    <string name="btn_next">NEXT</string>

    <string name="game_base_picker_title">Words Count</string>
    <string name="game_base_radio_title">Additional Items to Guess</string>

    <string name="game_words_title">Exercise Words</string>
    <string name="game_letters_title">Exercise Letters</string>

    <string name="game_result_correct">Correct</string>
    <string name="game_result_incorrect">Incorrect</string>
    <string name="incorrect_word">Incorrect Word</string>

    <string name="exercise_results">Exercise Results</string>

    <string name="ex_word_1">Word 1</string>
    <string name="ex_word_2">Word 2</string>
    <string name="ex_word_3">Word 3</string>
    <string name="ex_word_4">Word 4</string>

    <string name="ex_letter_a">A</string>
    <string name="ex_letter_b">B</string>
    <string name="ex_letter_c">C</string>
    <string name="ex_letter_d">D</string>
    <string name="ex_translation">Translation</string>
</resources>
