<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/background_accent">

        <TextView
            android:id="@+id/tv_dialog_exit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/message_sure_exit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialog_exit_title"
            android:layout_toStartOf="@+id/btn_ok"
            android:text="@string/cancel"
            style="?attr/button_transparent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialog_exit_title"
            android:layout_alignParentEnd="true"
            android:text="@string/ok"
            style="?attr/button_white"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>