<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/accent_background">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
        android:id="@+id/cv_word_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/tv_dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:focusable="true"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/word"
            android:imeOptions="actionDone"
            android:lines="1" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_translate_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/cv_word_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_translate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:focusable="true"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/translate"
            android:imeOptions="actionDone"
            android:lines="1" />

    </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_translate_edit"
            android:layout_toStartOf="@+id/btn_ok"
            android:text="@string/cancel"
            style="?attr/button_transparent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_translate_edit"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            style="?attr/button_white"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>