<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_nav_elevated_view_height"
    style="?attr/background_accent">

    <LinearLayout
        android:id="@+id/cv_elevated"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btns_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_words"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/iv_nav_words"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_list"/>

            <TextView
                android:id="@+id/tv_nav_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_words"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/iv_nav_games"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_games"/>

            <TextView
                android:id="@+id/tv_nav_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tests"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/iv_nav_settings"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings"/>

            <TextView
                android:id="@+id/tv_nav_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_top_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        style="?attr/background_navigation"
        android:visibility="gone"/>

</RelativeLayout>