<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_game_result_border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_game_result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:id="@+id/rl_game_result_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:id="@+id/rl_game_result_indicator_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp">

                <ImageView
                    android:id="@+id/iv_game_result_indicator"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_game_result_correct"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_game_result_word_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:text="@string/word"
                android:textSize="20sp"
                android:textStyle="bold"
                style="?attr/text_accent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tv_game_result_word_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:textColor="@color/grey"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_below="@+id/tv_game_result_word_title"/>

            <TextView
                android:id="@+id/tv_game_result_translation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:text="@string/translate"
                android:textSize="20sp"
                android:textStyle="bold"
                style="?attr/text_accent"
                android:layout_below="@+id/tv_game_result_word_value"/>

            <TextView
                android:id="@+id/tv_game_result_translation_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:textColor="@color/grey"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_below="@+id/tv_game_result_translation_title"/>

            <TextView
                android:id="@+id/tv_game_result_incorrect_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:text="@string/incorrect_word"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"
                style="?attr/text_accent"
                android:layout_below="@+id/tv_game_result_translation_value"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_game_result_incorrect_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_below="@+id/tv_game_result_incorrect_title"
                android:visibility="gone"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>